[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Koulen-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/optionChange.ogg" type="AudioStream" id=3]
[ext_resource path="res://entities/Close.gd" type="Script" id=4]
[ext_resource path="res://entities/Start.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/optionSelect.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/menu.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/textures/haskell.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/inicio.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=3]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
font_data = ExtResource( 1 )

[node name="Menu" type="Node"]
script = ExtResource( 2 )
BASE = Color( 0.858824, 0.815686, 0.815686, 1 )
SELECTED = Color( 0.686275, 0.168627, 0.168627, 1 )
MENU_MUSIC = ExtResource( 7 )
ON_CHANGE_SFX = ExtResource( 3 )
ON_CONFIRM_SFX = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1091.0
margin_bottom = 599.0
color = Color( 0.223529, 0.294118, 0.290196, 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 513, 354 )
rotation = -0.523599
scale = Vector2( 0.561985, 0.561985 )
texture = ExtResource( 9 )

[node name="UpperLimit" type="Position2D" parent="Background"]
position = Vector2( 1391.02, -243.524 )
rotation = 0.523599
scale = Vector2( 1.77941, 1.77941 )

[node name="LowerLimit" type="Position2D" parent="Background"]
position = Vector2( -1510.38, -85.0778 )
rotation = 0.523599
scale = Vector2( 1.77941, 1.77941 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 446, -50 )
rotation = -0.523599
scale = Vector2( 0.561985, 0.561985 )
texture = ExtResource( 9 )

[node name="UpperLimit" type="Position2D" parent="Background2"]

[node name="LowerLimit" type="Position2D" parent="Background2"]

[node name="Background3" type="Sprite" parent="."]
position = Vector2( 1000, 487 )
rotation = -0.523599
scale = Vector2( 0.561985, 0.561985 )
texture = ExtResource( 9 )

[node name="UpperLimit" type="Position2D" parent="Background3"]

[node name="LowerLimit" type="Position2D" parent="Background3"]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_top = 54.0
margin_bottom = 136.0

[node name="Titulo" type="Label" parent="CenterContainer"]
margin_left = 393.0
margin_right = 687.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.94902, 0.917647, 0.917647, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "el arte del robo"

[node name="Start" type="Label" parent="."]
margin_left = 816.0
margin_top = 403.0
margin_right = 1069.0
margin_bottom = 458.0
custom_colors/font_color = Color( 0.94902, 0.917647, 0.917647, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "comenzar el robo"
script = ExtResource( 5 )

[node name="Close" type="Label" parent="."]
margin_left = 816.0
margin_top = 463.0
margin_right = 1010.0
margin_bottom = 518.0
custom_colors/font_color = Color( 0.94902, 0.917647, 0.917647, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "cerrar el juego"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Fade" type="ColorRect" parent="."]
visible = false
margin_right = 1084.0
margin_bottom = 605.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="SFXHaskell" type="AudioStreamPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1125, 552 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="BackgroundTween" type="Tween" parent="."]

[connection signal="gui_input" from="Start" to="Start" method="_on_Start_gui_input"]
[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_Start_mouse_exited"]
[connection signal="gui_input" from="Close" to="Close" method="_on_Close_gui_input"]
[connection signal="mouse_entered" from="Close" to="." method="_on_Close_mouse_entered"]
[connection signal="mouse_exited" from="Close" to="." method="_on_Close_mouse_exited"]
